HelloUltraviolet/Fixtures/RejectedSource/Statements/DeferNonUnit/Source/Main.uv
//! Rejected statement specimen for a non-unit defer block.

public procedure deferNonUnitReference() -> i32 {
    defer {
        1
    }
    return 0
}
